<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorpink"
    tools:context=".StartScreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_level_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/pink_level_vowles_text_background"
                    >

                    <com.etrack.test.FontText
                        android:layout_margin="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/short_vowel_a1"/>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_level_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/pink_level_vowles_text_background"
                    >

                    <com.etrack.test.FontText
                        android:layout_margin="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/short_vowel_a2"/>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_level_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp" android:gravity="center"
                    android:background="@drawable/pink_level_vowles_text_background"
                    >

                    <com.etrack.test.FontText
                        android:layout_margin="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/short_vowel_a3"/>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_level_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/pink_level_vowles_text_background">
                    <com.etrack.test.FontText
                        android:layout_margin="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/short_vowel_a4"/>


                </LinearLayout>
            </LinearLayout>

</RelativeLayout>